--- a/src/app/core/components/widgets/widgetpool/widgetpool.component.css
+++ b/src/app/core/components/widgets/widgetpool/widgetpool.component.css
@@ -118,7 +118,7 @@
 }
 
 .pool-name{
-  font-size:300%;
+  font-size:240%;
 }
 
 .pool-status .icon-wrapper{
